Fixed collapsing panels.

--- a/src/main/resources/static/css/algo/algorithm.css
+++ b/src/main/resources/static/css/algo/algorithm.css
@@ -1,8 +1,3 @@
 .clickable{
     cursor: pointer;   
 }
-
-.panel-heading span {
-    margin-top: -20px;
-    font-size: 15px;
-}
